@startuml Diagrama de Clases Empresa
'skinparam style strictuml
skinparam Class {
    FontSize 15
    BorderColor Blue
    BackgroundColor APPLICATION
    BorderThickness 3
}
abstract class Persona {
    -name : String
    -age : Integer
    +getName()
    +getAge()
    +setName(String)
    +setAge(String)
}
class Empleado {
    -sueldoBruto : Double
    +getSueldoBruto()
    +setSueldoBruto(Double)
    +obtenerDatos()
}
enum Categoria{
    ADMINISTRADOR
    GERENTE
    SUBGERENTE
}
class Directivo {
    -categoria : Categoria
    +getCategoria()
    +setCategoria(String)
}
class Cliente {
    -phone : String
    getPhone()
    setPhone(String)
}
class Empresa {
    -name
    getName()
    setName(String)
}

Empresa "1    ͘ " *--- " 0..* " Persona : " +listaPersonas"
Persona <|-- Empleado
Persona <|- Cliente
Directivo -> Categoria
Directivo " 1    ͘ " -down-|> " 1..* " Empleado : " +listaEmpleados\n+listaDirectivos"
Empleado o-up-o Directivo
@enduml